Worked on clock functionality, heating and cooling